salesforce_sfdx/main/default/objects/ContactPointAddress/fields/isActiveNow__c.field-meta.xml
<CustomField>
    <fullName>isActiveNow__c</fullName>
    <formula>AND( ActiveFromDate &lt;=  TODAY() ,OR(ActiveToDate >=  TODAY(),ISNULL(ActiveToDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActiveNow</label>
    <type>Checkbox</type>
</CustomField>